--- CHANGELOG ---

--- Assimulo-b1.02 ---
    * Added support for user-defined Jacobians when using IDA

--- Assimulo-b1.01 ---
    * The rough first version.